# search-ranking-utils

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: create_criteo_data.ipynb  criteo_example.ipynb
search_ranking_utils/evaluation/: feature_importance.py  metrics.py
search_ranking_utils/modelling/: model_factory.py  tf_data_utils.py
search_ranking_utils/modelling/models/: popularity_baseline.py  wide_deep_model.py
search_ranking_utils/preprocessing/: data_preprocessing.py  feature_engineering.py  preprocessor.py  tf_data_utils.py
search_ranking_utils/utils/: files.py  schema.py  testing.py
tests/: conftest.py
tests/config/: schema.json  test_schema_2.json
tests/data/: dummy_data.csv
tests/modelling/models/: test_model_factory.py
tests/search_ranking_utils/: test_data_preprocessing.py
tests/search_ranking_utils/evaluation/: test_feature_importance.py  test_metrics.py
tests/search_ranking_utils/modelling/: test_model_factory.py  test_tf_data_utils.py
tests/search_ranking_utils/modelling/models/: test_model_factory.py  test_popularity_baseline.py  test_wide_deep_model.py
tests/search_ranking_utils/preprocessing/: test_data_preprocessing.py  test_feature_engineering.py  test_preprocessor.py  test_tf_data_utils.py
tests/search_ranking_utils/utils/: test_schema.py
